--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	},
 	"description": "An ESLint shareable config.",
 	"devDependencies": {
-		"eslint": "^7.32.0",
-		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-vue": "^7.19.1"
+		"eslint": "^8.1.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-vue": "^8.0.1"
 	},
 	"homepage": "https://github.com/Craiqser/eslint-config#readme",
 	"keywords": [
@@ -22,9 +22,9 @@
 	"main": "index.js",
 	"name": "@craiqser/eslint-config",
 	"peerDependencies": {
-		"eslint": "^7.32.0",
-		"eslint-plugin-import": "^2.24.2",
-		"eslint-plugin-vue": "^7.19.1"
+		"eslint": "^8.1.0",
+		"eslint-plugin-import": "^2.25.2",
+		"eslint-plugin-vue": "^8.0.1"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -34,7 +34,8 @@
 		"url": "git+https://github.com/Craiqser/eslint-config.git"
 	},
 	"scripts": {
-		"lint": "npx eslint ."
+		"lint": "npx eslint .",
+		"publish": "npm publish"
 	},
-	"version": "1.0.6"
+	"version": "1.0.8"
 }
