--- a/package.json
+++ b/package.json
@@ -4,11 +4,15 @@
 		"url": "https://github.com/Craiqser/eslint-config/issues"
 	},
 	"dependencies": {
-		"eslint": "^8.4.1",
+		"@typescript-eslint/eslint-plugin": "^5.7.0",
+		"@typescript-eslint/parser": "^5.7.0",
 		"eslint-plugin-import": "^2.25.3",
 		"eslint-plugin-vue": "8.2.0"
 	},
 	"description": "An ESLint shareable config.",
+	"devDependencies": {
+		"eslint": "^8.5.0"
+	},
 	"homepage": "https://github.com/Craiqser/eslint-config#readme",
 	"keywords": ["config", "craiqser", "eslint", "eslintconfig", "linter", "preset"],
 	"license": "MIT",
@@ -28,5 +32,5 @@
 		"lint": "npx eslint .",
 		"pub": "npm publish"
 	},
-	"version": "1.1.0"
+	"version": "1.1.1"
 }
