--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"description": "An ESLint shareable config.",
 	"devDependencies": {
 		"@types/eslint": "^8.40.0",
+		"@types/node": "^20.2.5",
 		"eslint": "^8.41.0"
 	},
 	"homepage": "https://github.com/Craiqser/eslint-config#readme",
@@ -50,5 +51,5 @@
 		"lint": "eslint .",
 		"pub": "npm publish"
 	},
-	"version": "2.0.0"
+	"version": "2.0.1"
 }
