--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
 		"url": "https://github.com/Craiqser/eslint-config/issues"
 	},
 	"dependencies": {
-		"@typescript-eslint/eslint-plugin": "^6.4.1",
-		"@typescript-eslint/parser": "^6.4.1",
+		"@typescript-eslint/eslint-plugin": "^6.8.0",
+		"@typescript-eslint/parser": "^6.8.0",
 		"eslint-plugin-import": "^2.28.1",
-		"eslint-plugin-n": "^16.0.2",
+		"eslint-plugin-n": "^16.2.0",
 		"eslint-plugin-promise": "^6.1.1",
 		"eslint-plugin-vue": "^9.17.0",
-		"typescript": "^5.2.0"
+		"typescript": "^5.2.2"
 	},
 	"description": "An ESLint shareable config.",
 	"devDependencies": {
-		"@types/eslint": "^8.44.2",
-		"@types/node": "^20.5.6",
-		"eslint": "^8.48.0"
+		"@types/eslint": "^8.44.6",
+		"@types/node": "^20.8.7",
+		"eslint": "^8.51.0"
 	},
 	"homepage": "https://github.com/Craiqser/eslint-config#readme",
 	"keywords": [
@@ -35,8 +35,9 @@
 	"license": "MIT",
 	"main": "index.js",
 	"name": "@craiqser/eslint-config",
+	"packageManager": "pnpm@8.9.2",
 	"peerDependencies": {
-		"eslint": ">=8.40.2",
+		"eslint": ">=8.0.0",
 		"typescript": ">=5.0.2"
 	},
 	"publishConfig": {
@@ -50,5 +51,5 @@
 		"lint": "eslint .",
 		"pub": "npm publish"
 	},
-	"version": "2.0.9"
+	"version": "2.1.0"
 }
