--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "ESNext",
-		"moduleResolution": "nodenext",
+		"moduleResolution": "Node",
 		"strictNullChecks": true,
 		"target": "ESNext"
 	},
